# Calishot-2.0

./: .gitignore  AU.txt.bak  CWC.py  Instructions.txt  MANIFEST.in  README-DOCKER.md  README.md  app.py  calishot.py  calishot.service  calishot_logging.py  crontab  demeter.html  demeter.py  docker-compose.yml  dockerfile  functions.py  install_calishot.py  install_from_github.py  metadata.json  pyproject.toml  requirements.txt  run-this-stuff.sh  run_calishot.sh  test.py  total_servers_by_country.html  update_db_schema.py
.devcontainer/: devcontainer.json
ShodanTest/: requirements.txt  shodan.db  test.py
ShodanTest/models/: base.py
app/data/: index.db
calishot_web/: README.md  __init__.py  app.py  cli.py
calishot_web.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
calishot_web/templates/: demeter.html  index.html  index_clean.html  index_clean.old.html  servers_by_country.html  total_books_by_country.html  total_servers_by_country.html
computerbooks/: metadata_db_prefs_backup.json
installers/: install.ps1  install.py  install.sh
packaging/: build-linux.sh  build-macos.sh  build-windows.ps1
